Unacceptably slow thread-safe duplicate write detection
The atomic increments slow down the code by horrifying amounts (a
factor of 2 or so for the takeWhile benchmark, for instance).

--- a/benchmarks/attoparsec-benchmarks.cabal
+++ b/benchmarks/attoparsec-benchmarks.cabal
@@ -15,6 +15,7 @@ executable attoparsec-benchmarks
     Links
     Numbers
   hs-source-dirs: .. .
+  c-sources: ../cbits/cbits.c
   ghc-options: -O2 -Wall -rtsopts
   build-depends:
     array,
