--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -45,6 +45,7 @@ library
                  deepseq,
                  scientific >= 0.3.1 && < 0.4,
                  text >= 1.1.1.3
+  c-sources:     cbits/cbits.c
   if impl(ghc < 7.4)
     build-depends:
       bytestring < 0.10.4.0
@@ -79,6 +80,7 @@ library
 test-suite tests
   type:           exitcode-stdio-1.0
   hs-source-dirs: tests .
+  c-sources:      cbits/cbits.c
   main-is:        QC.hs
   other-modules:  QC.Buffer
                   QC.ByteString
@@ -106,6 +108,7 @@ test-suite tests
 benchmark benchmarks
   type: exitcode-stdio-1.0
   hs-source-dirs: benchmarks, .
+  c-sources:    cbits/cbits.c
   ghc-options: -O2 -Wall -rtsopts
   main-is: Benchmarks.hs
   other-modules:
