Start off some warp-related benchmarks

--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -117,6 +117,8 @@ benchmark benchmarks
     HeadersText
     Links
     Numbers
+    Warp
+    Warp.ReadInt
   ghc-options: -O2 -Wall
 
   if flag(developer)
@@ -126,15 +128,17 @@ benchmark benchmarks
     array,
     base == 4.*,
     bytestring >= 0.10.4.0,
-    criterion >= 0.8.1.0,
+    criterion >= 1.0,
     deepseq >= 1.1,
     directory,
     filepath,
+    ghc-prim,
     parsec >= 3.1.2,
     scientific,
     text >= 1.1.1.0,
     unordered-containers,
-    vector
+    vector,
+    warp
 
 source-repository head
   type:     git
