--- a/benchmarks/attoparsec-benchmarks.cabal
+++ b/benchmarks/attoparsec-benchmarks.cabal
@@ -14,18 +14,22 @@ executable attoparsec-benchmarks
     HeadersText
     Links
     Numbers
+    Warp
+    Warp.ReadInt
   hs-source-dirs: .. .
   ghc-options: -O2 -Wall -rtsopts
   build-depends:
     array,
     base == 4.*,
     bytestring >= 0.10.4.0,
-    criterion >= 0.8.1.0,
+    criterion >= 1.0,
     deepseq >= 1.1,
     directory,
     filepath,
+    ghc-prim,
     parsec >= 3.1.2,
     scientific >= 0.3.1,
     text >= 1.1.1.0,
     unordered-containers,
-    vector
+    vector,
+    warp
