--- a/benchmarks/attoparsec-benchmarks.cabal
+++ b/benchmarks/attoparsec-benchmarks.cabal
@@ -27,6 +27,7 @@ executable attoparsec-benchmarks
     directory,
     filepath,
     ghc-prim,
+    http-types,
     parsec >= 3.1.2,
     scientific >= 0.3.1,
     text >= 1.1.1.0,
