--- a/benchmarks/attoparsec-benchmarks.cabal
+++ b/benchmarks/attoparsec-benchmarks.cabal
@@ -11,6 +11,7 @@ executable attoparsec-benchmarks
   other-modules:
     Common
     HeadersByteString
+    HeadersByteString.Atto
     HeadersText
     Links
     Numbers
