--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -100,6 +100,7 @@ test-suite tests
     array,
     base >= 4 && < 5,
     bytestring,
+    containers,
     deepseq >= 1.1,
     QuickCheck >= 2.7,
     quickcheck-unicode,
@@ -135,6 +136,7 @@ benchmark benchmarks
     base == 4.*,
     bytestring >= 0.10.4.0,
     case-insensitive,
+    containers,
     criterion >= 1.0,
     deepseq >= 1.1,
     directory,
