--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -146,6 +146,7 @@ benchmark benchmarks
     parsec >= 3.1.2,
     scientific,
     text >= 1.1.1.0,
+    transformers,
     unordered-containers,
     vector
 
