--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -105,8 +105,8 @@ test-suite tests
     QuickCheck >= 2.7,
     quickcheck-unicode,
     scientific,
-    test-framework >= 0.8.0.2,
-    test-framework-quickcheck2 >= 0.3.0.3,
+    tasty >= 0.11,
+    tasty-quickcheck >= 0.8,
     text,
     transformers,
     vector
