Add TextFastSet module to attoparsec-benchmarks.cabal

--- a/benchmarks/attoparsec-benchmarks.cabal
+++ b/benchmarks/attoparsec-benchmarks.cabal
@@ -17,6 +17,7 @@ executable attoparsec-benchmarks
     Numbers
     Network.Wai.Handler.Warp.ReadInt
     Sets
+    TextFastSet
     Warp
   hs-source-dirs: .. . warp-3.0.1.1
   ghc-options: -O2 -Wall -rtsopts
