--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -1,5 +1,6 @@
 name:            attoparsec
 version:         0.13.2.2
+x-revision:      3
 license:         BSD3
 license-file:    LICENSE
 category:        Text, Parsing
@@ -44,7 +45,7 @@ library
                  containers,
                  deepseq,
                  scientific >= 0.3.1 && < 0.4,
-                 transformers,
+                 transformers >= 0.2 && (< 0.4 || >= 0.4.1.0) && < 0.6,
                  text >= 1.1.1.3
   if impl(ghc < 7.4)
     build-depends:
@@ -53,7 +54,7 @@ library
   if !impl(ghc >= 8.0)
     -- Data.Semigroup && Control.Monad.Fail are available in base-4.9+
     build-depends: fail == 4.9.*,
-                   semigroups >=0.16.1 && <0.19
+                   semigroups >=0.16.1 && <0.20
 
   exposed-modules: Data.Attoparsec
                    Data.Attoparsec.ByteString
@@ -133,13 +134,13 @@ test-suite tests
     tasty >= 0.11,
     tasty-quickcheck >= 0.8,
     text,
-    transformers,
+    transformers >= 0.2 && (< 0.4 || >= 0.4.1.0) && < 0.6,
     vector
 
   if !impl(ghc >= 8.0)
     -- Data.Semigroup && Control.Monad.Fail are available in base-4.9+
     build-depends: fail == 4.9.*,
-                   semigroups >=0.16.1 && <0.19
+                   semigroups >=0.16.1 && <0.20
 
 benchmark benchmarks
   type: exitcode-stdio-1.0
@@ -178,7 +179,7 @@ benchmark benchmarks
     parsec >= 3.1.2,
     scientific,
     text >= 1.1.1.0,
-    transformers,
+    transformers >= 0.2 && (< 0.4 || >= 0.4.1.0) && < 0.6,
     unordered-containers,
     vector
 
