Move upstream repo to bgamari/attoparsec
Where we can readily enable Travis

--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -189,5 +189,5 @@ benchmark benchmarks
 
 source-repository head
   type:     git
-  location: https://github.com/bos/attoparsec
+  location: https://github.com/bgamari/attoparsec
 
