--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -39,7 +39,7 @@ Flag developer
 
 library
   build-depends: array,
-                 base >= 4.2 && < 5,
+                 base >= 4.3 && < 5,
                  bytestring,
                  containers,
                  deepseq,
@@ -124,10 +124,10 @@ test-suite tests
 
   build-depends:
     array,
-    base >= 4 && < 5,
+    base,
     bytestring,
     deepseq >= 1.1,
-    QuickCheck >= 2.7 && < 2.10,
+    QuickCheck >= 2.13.2 && < 2.14,
     quickcheck-unicode,
     scientific,
     tasty >= 0.11,
