--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -1,14 +1,15 @@
+cabal-version:   2.0
+  -- 2.0 needed for internal libraries
 name:            attoparsec
 version:         0.14.4
 license:         BSD3
 license-file:    LICENSE
 category:        Text, Parsing
 author:          Bryan O'Sullivan <bos@serpentine.com>
-maintainer:      Bryan O'Sullivan <bos@serpentine.com>, Ben Gamari <ben@smart-cactus.org>
+maintainer:      Ben Gamari <ben@smart-cactus.org>
 stability:       experimental
 tested-with:     GHC == 7.4.2, GHC ==7.6.3, GHC ==7.8.4, GHC ==7.10.3, GHC ==8.0.2, GHC ==8.2.2, GHC==8.4.4, GHC==8.6.5, GHC==8.8.4, GHC==8.10.7, GHC ==9.0.2, GHC ==9.2.1
 synopsis:        Fast combinator parsing for bytestrings and text
-cabal-version:   2.0
 homepage:        https://github.com/haskell/attoparsec
 bug-reports:     https://github.com/haskell/attoparsec/issues
 build-type:      Simple
@@ -17,15 +18,17 @@ description:
     efficiently with network protocols and complicated text/binary
     file formats.
 extra-source-files:
-    README.md
     benchmarks/*.txt
     benchmarks/json-data/*.json
     benchmarks/Makefile
     benchmarks/med.txt.bz2
-    changelog.md
     examples/*.c
     examples/*.hs
     examples/Makefile
+
+extra-doc-files:
+    README.md
+    changelog.md
 
 Flag developer
   Description: Whether to build the library in development mode
@@ -90,6 +93,8 @@ library
   ghc-options: -O2 -Wall
 
   default-language: Haskell2010
+  default-extensions:
+    TypeOperators
 
   if flag(developer)
     ghc-prof-options: -auto-all
