--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -8,7 +8,6 @@ category:        Text, Parsing
 author:          Bryan O'Sullivan <bos@serpentine.com>
 maintainer:      Ben Gamari <ben@smart-cactus.org>
 stability:       experimental
-tested-with:     GHC == 7.4.2, GHC ==7.6.3, GHC ==7.8.4, GHC ==7.10.3, GHC ==8.0.2, GHC ==8.2.2, GHC==8.4.4, GHC==8.6.5, GHC==8.8.4, GHC==8.10.7, GHC ==9.0.2, GHC ==9.2.1
 synopsis:        Fast combinator parsing for bytestrings and text
 homepage:        https://github.com/haskell/attoparsec
 bug-reports:     https://github.com/haskell/attoparsec/issues
@@ -17,6 +16,23 @@ description:
     A fast parser combinator library, aimed particularly at dealing
     efficiently with network protocols and complicated text/binary
     file formats.
+
+tested-with:
+  GHC == 9.6.0
+  GHC == 9.4.4
+  GHC == 9.2.6
+  GHC == 9.0.2
+  GHC == 8.10.7
+  GHC == 8.8.4
+  GHC == 8.6.5
+  GHC == 8.4.4
+  GHC == 8.2.2
+  GHC == 8.0.2
+  GHC == 7.10.3
+  GHC == 7.8.4
+  GHC == 7.6.3
+  GHC == 7.4.2
+
 extra-source-files:
     benchmarks/*.txt
     benchmarks/json-data/*.json
@@ -63,7 +79,7 @@ library
                  scientific >= 0.3.1 && < 0.4,
                  transformers >= 0.2 && (< 0.4 || >= 0.4.1.0) && < 0.7,
                  text >= 1.1.1.3,
-                 ghc-prim <0.9,
+                 ghc-prim < 0.11,
                  attoparsec-internal
   if impl(ghc < 7.4)
     build-depends:
